...
                child: ElevatedButton(
                  onPressed: () => {
                    setState(() {
                      startSaida();
                    }),
                  },
                  key: Key('iniciar'),
                  child: Text("Iniciar"),
                ),
              ),
            ],
          ),
        ),
...
